Первоначальный дизаин формы

--- a/web-client/site/index.html
+++ b/web-client/site/index.html
@@ -11,7 +11,34 @@
 <body>
     <div class="wrapper">
 
+
+        <form action="">
+
+
+            <div class="form-right-decoration"></div>
+            <div class="form-left-decoration"></div>
+            <div class="circle"></div>
+
+            <div class="main-form">
+
+                <div class="info">
+                    <label>Логин</label>
+                    <input name="login" type="text">
+                </div>
+
+                <div class="info">
+                    <label>Пароль</label>
+                    <input name="password" ="password">
+                </div>
+
+                <button>Войти</button>
+
+            </div>
+
+        </form>
+ 
         
+
     </div>
 </body>
 </html>
