--- a/web-client/site/index.html
+++ b/web-client/site/index.html
@@ -24,7 +24,7 @@
 
                 <div class="info">
                     <label>Пароль</label>
-                    <input name="password" ="password">
+                    <input name="password" type="password">
                 </div>
 
                 <button>Войти</button>
