--- a/web-client/static/index.html
+++ b/web-client/static/index.html
@@ -9,10 +9,10 @@
 </head>
 
 <body>
-    <div class="wrapper">
+    <div class="wrapper __center">
 
 
-        <form action="">
+        <form action="./chats.html">
 
 
             <div class="form-right-decoration"></div>
@@ -22,12 +22,14 @@
             <div class="main-form">
 
 
-                <div class="info">
+                <div class="setinfo">
                     <label>Пароль</label>
-                    <input name="password" type="password">
+                    <input name="password" type="password" >
                 </div>
 
+                <!-- При нажатии перекидывает в chats.html -->
                 <button>Войти</button>
+
 
             </div>
 
