index адаптирован chats (20%)

--- a/web-client/static/index.html
+++ b/web-client/static/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../templates/css/style.css">
-
+    <link rel="stylesheet" href="../templates/css/adapt.css">
     <title>MessageCenter</title>
 </head>
 
@@ -23,7 +23,7 @@
 
 
                 <div class="setinfo">
-                    <label>Пароль</label>
+                    <label class="psw-text">Пароль</label>
                     <input name="password" type="password" >
                 </div>
 
