--- a/web-client/static/chats.html
+++ b/web-client/static/chats.html
@@ -14,6 +14,10 @@
 
         <div class="sidebar">
 
+            <div class="navpanel">
+                <img class="arrow" src="../templates/css/arrow.svg" alt="">
+            </div>
+            <div class="null"></div>
             <div class="nochat">
                 У вас пока что нет чатов
             </div>
